More minor changes

--- a/chatApp.html
+++ b/chatApp.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-  <h1>Leaderboard</h1>
+  <h1>Leaderboard Life</h1>
 
   <h2>Welcome To The New Application</h2>
   {{> leaderboard}}
